--- a/output/html/index.html
+++ b/output/html/index.html
@@ -2576,7 +2576,18 @@ ul.task-list{list-style: none;}
 
 
 
-<link rel="stylesheet" href="../resources/css/styles.css" type="text/css" />
+<style type="text/css">
+
+.scrollable-chunk {
+max-height: 250px;
+overflow-y: auto;
+background-color: inherit;
+}
+
+a {
+color: #5793A3;
+text-decoration: none;
+}</style>
 
 
 
