--- a/resources/html/hero-image.html
+++ b/resources/html/hero-image.html
@@ -1,3 +1,6 @@
+/* -------------------------------------------------------------------------- */
+/*                          Hero Image with Text Overlay                      */
+/* -------------------------------------------------------------------------- */
 <div class="hero-image"> 
         <div class="image-text">
           <div class="top-text">Ridership Analysis:</div>
