--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<meta http-equiv="refresh" content="0;url=https://oceallaigh-p.github.io/cyclistic_bike_analysis/output/html/cyclistic_bikeshare_report.html" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- OGP tags -->
+    <meta property="og:title" content="Cyclistic bike-share ridership analysis" />
+    <meta property="og:description" content="Understanding rider usage patterns to optimize marketing strategies." />
+    <meta property="og:image" content="https://oceallaigh-p.github.io/cyclistic_bike_analysis/resources/images/chicago_bikeshare_2_small.jpg" />
+    <meta property="og:url" content="https://oceallaigh-p.github.io/cyclistic_bike_analysis" />
+    <!-- Additional OGP tags (optional) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <!-- Meta refresh tag -->
+    <meta http-equiv="refresh" content="0;url=https://oceallaigh-p.github.io/cyclistic_bike_analysis/output/html/cyclistic_bikeshare_report.html" />
+</head>
+<body>
+    <p>If you are not redirected automatically, follow this <a href="https://oceallaigh-p.github.io/cyclistic_bike_analysis/output/html/cyclistic_bikeshare_report.html">link</a>.</p>
+</body>
+</html>
+
+
